--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,18 @@
     "react"
   ],
   "rules": {
-    "react/jsx-filename-extension": [1,{"extensions": [".js",".jsx",".ts",".tsx"]}],
-    "react/react-in-jsx-scope": "off"
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [
+          ".js",
+          ".jsx",
+          ".ts",
+          ".tsx"
+        ]
+      }
+    ],
+    "react/react-in-jsx-scope": "off",
+    "jsx-a11y/anchor-is-valid": "off"
   }
 }
